--- a/views/index.html
+++ b/views/index.html
@@ -142,14 +142,14 @@
 
                         <div class='my-2' id='manual__usage'>
                             <h4 class='lead text-center'>Usage</h4>
-                            <p class='text-center text-danger'>[URL]/api/timestamp/[time]</p>
+                            <p class='text-center text-danger'>https://admijw-timestamp-microservice.herokuapp.com/api/timestamp/[time]</p>
                         </div>
 
                         <div class='text-center my-4' id='manual__example_usage'>
                             <h4 class='lead text-center'>Example Usage</h4>
-                            <a class='btn btn-link m-0 p-0' href='#'>[URL]/api/timestamp/2015-12-25</a>
+                            <a class='btn btn-link m-0 p-0' href='#'>https://admijw-timestamp-microservice.herokuapp.com/api/timestamp/2015-12-25</a>
                             <br>
-                            <a class='btn btn-link m-0 p-0' href='#'>[URL]/api/timestamp/1451001600000</a>
+                            <a class='btn btn-link m-0 p-0' href='#'>https://admijw-timestamp-microservice.herokuapp.com/api/timestamp/1451001600000</a>
                         </div>
 
                         <div class='text-center my-2' id='manual__example_output'>
