--- a/views/index.html
+++ b/views/index.html
@@ -147,9 +147,9 @@
 
                         <div class='text-center my-4' id='manual__example_usage'>
                             <h4 class='lead text-center'>Example Usage</h4>
-                            <a class='btn btn-link m-0 p-0' href='#'>https://admijw-timestamp-microservice.herokuapp.com/api/timestamp/2015-12-25</a>
+                            <a class='btn btn-link m-0 p-0' href='./api/timestamp/2015-12-25'>https://admijw-timestamp-microservice.herokuapp.com/api/timestamp/2015-12-25</a>
                             <br>
-                            <a class='btn btn-link m-0 p-0' href='#'>https://admijw-timestamp-microservice.herokuapp.com/api/timestamp/1451001600000</a>
+                            <a class='btn btn-link m-0 p-0' href='./api/timestamp/1451001600000'>https://admijw-timestamp-microservice.herokuapp.com/api/timestamp/1451001600000</a>
                         </div>
 
                         <div class='text-center my-2' id='manual__example_output'>
