Added noreferrer noopener to links

--- a/views/index.html
+++ b/views/index.html
@@ -61,13 +61,13 @@
                 </li>
                 <!-- FreeCodeCamp -->
                 <li class='nav-item nav-link'>
-                    <a class='text-light' href='https://www.freecodecamp.org/admi_jw' rel='noreferrer' target='_blank'> 
+                    <a class='text-light' href='https://www.freecodecamp.org/admi_jw' rel='noreferrer noopener' target='_blank'> 
                         <i class="fab fa-free-code-camp"></i>
                     </a>
                 </li>
                 <!-- Github-->
                 <li class='nav-item nav-link'>
-                    <a class='text-light' href='https://github.com/AdmiJW' target='_blank' rel='noreferrer'>
+                    <a class='text-light' href='https://github.com/AdmiJW' target='_blank' rel='noreferrer noopener'>
                         <i class="fab fa-github-alt"></i>
                     </a>
                 </li>
